# IF5152_CompVis-K01_13522164

./: README.md  main.py  pyproject.toml  requirements.txt
01_filtering/: Result.md  filtering.py
02_edge/: Result.md  edge_detection.py
03_featurepoints/: Result.md  feature_detection.py
03_featurepoints/output/: all_statistics.json  astronaut_statistics.json  camera_statistics.json  checkerboard_statistics.json  chelsea_statistics.json  coin_statistics.json  personal_image_statistics.json
04_geometry/: Result.md  geometric_transforms.py
04_geometry/output/: all_transform_params.csv  all_transform_params.json  checkerboard_transform_params.csv  checkerboard_transform_params.json  personal_image_transform_params.csv  personal_image_transform_params.json
