[project]
name = "valentino-chryslie-triadi-13522164-if5152-tugasindividucv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "opencv-contrib-python>=4.8.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.25.2",
]
